[project]
name = "tb_pulumi"
version = "0.0.9"
description = "Framework and patterns for using Pulumi at Thunderbird"
requires-python = ">3.12"
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/thunderbird/pulumi.git"
issues = "https://github.com/thunderbird/pulumi/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = [
    "furo",
    "ruff",
    "sphinx"
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "__pypackages__",
    "venv",
]

# Always generate Python 3.12-compatible code.
target-version = "py312"
