[project]
name = "tb_pulumi"
version = "0.0.16"
description = "Framework and patterns for using Pulumi at Thunderbird"
requires-python = ">=3.13"
dynamic = ["dependencies"]

[project.urls]
repository = "https://github.com/thunderbird/pulumi.git"
issues = "https://github.com/thunderbird/pulumi/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = [
    "furo",
    "pre-commit",
    "ruff",
    "sphinx"
]
